--- a/package.json
+++ b/package.json
@@ -9,7 +9,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "puppeteer-firefox": "^0.5.1"
-  }
+  "dependencies": {}
 }
